--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "css-loader": "^2.1.1",
     "ejs": "^2.6.2",
     "eslint": "^6.8.0",
-    "eslint-plugin-vue": "^6.2.2",
     "express": "^4.16.4",
     "express-async-errors": "^3.1.1",
     "extract-loader": "^5.1.0",
@@ -28,11 +27,6 @@
     "npm-run-all": "^4.1.5",
     "sass-loader": "^7.3.1",
     "three": "^0.133.1",
-    "three-ik": "^0.1.0",
-    "vue": "^2.6.10",
-    "vue-loader": "^15.7.1",
-    "vue-pell-editor": "^2.0.1",
-    "vue-template-compiler": "^2.6.10",
     "watch": "^1.0.2",
     "webpack": "^4.46.0"
   },
@@ -45,7 +39,7 @@
     "watch": "node ./textures/watch.js"
   },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "nodemonConfig": {
     "ignore": [
       "node_modules/*",
